// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectInput component should call console.warn when given neither option nor children 1`] = `
<div
  className="input1"
>
  <label
    htmlFor="testSelect"
  >
    Select Something
    <select
      className="default-select"
      id="testSelect"
      name="testSelect"
      onChange={[MockFunction]}
      required={false}
      value="1"
    >
      You need to provide atleast children or options to the select element
    </select>
  </label>
</div>
`;

exports[`SelectInput component should display value if displayText isn't given in options 1`] = `
<div
  className="input1"
>
  <label
    htmlFor="testSelect"
  >
    Select Something
    <select
      className="default-select"
      id="testSelect"
      name="testSelect"
      onChange={[MockFunction]}
      required={false}
      value="1"
    >
      <option />
      <option />
    </select>
  </label>
</div>
`;

exports[`SelectInput component should render plaveholder when provided 1`] = `
<div
  className="input1"
>
  <label
    htmlFor="testSelect"
  >
    Select Something
    <select
      className="default-select"
      id="testSelect"
      name="testSelect"
      onChange={[MockFunction]}
      required={false}
      value="1"
    >
      <option
        value=""
      >
        Hello
      </option>
      You need to provide atleast children or options to the select element
    </select>
  </label>
</div>
`;

exports[`SelectInput component should render properly when given children 1`] = `
<div
  className="input1"
>
  <label
    htmlFor="testSelect"
  >
    Select Something
    <select
      className="default-select"
      id="testSelect"
      name="testSelect"
      onChange={[MockFunction]}
      required={false}
      value="1"
    >
      <option />
      <option />
    </select>
  </label>
</div>
`;

exports[`SelectInput component should render properly when given options prop 1`] = `
<div
  className="input1"
>
  <label
    htmlFor="testSelect"
  >
    Select Something
    <select
      className="default-select"
      id="testSelect"
      name="testSelect"
      onChange={[MockFunction]}
      required={false}
      value="1"
    >
      <option
        value={1}
      >
        hello
      </option>
      <option
        value={2}
      >
        how are you
      </option>
    </select>
  </label>
</div>
`;
